added mek to gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 systemProp.http.proxyHost=127.0.0.1
 systemProp.http.proxyPort=10809
 
-version=1.0.0
+version=1.0.1
 mc_version=1.16.5
 cyclopscore_version=1.11.6-61
 commoncapabilities_version=2.7.0-22
@@ -17,3 +17,5 @@ integratedterminals_version=1.2.3-46
 integratedtunnels_version=1.8.0-55
 integratedcrafting_version=1.0.14-22
 jei_version=7.7.0.107
+top_version=1.16-3.1.4-22
+mekanism_version=1.16.5-10.0.21.448
