improve mek core render and added the core render amount to config, default as 1

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,7 +11,7 @@ modId="colossal_battery"
 version="${file.jarVersion}"
 displayName="ColossalBattery"
 description='''
-.
+Energy batteries, but multi block!
 '''
 [[dependencies.colossal_battery]]
     modId="forge"
