--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=10809
+
 version=1.0.8
 mc_version=1.16.5
 cyclopscore_version=1.11.6-61
